--- a/src/components/style.css
+++ b/src/components/style.css
@@ -72,3 +72,9 @@ a:hover {
   color: #025064;
   background: #fff;
 }
+
+.typewriter-cursor {
+  animation: Typewriter-cursor 1s infinite;
+  margin-right: -0.15em;
+  margin-left: -0.15em;
+}
